Fix border of th.participant-header. It should no longer jump when scrolling horizontally.

--- a/server/app/assets/main.scss
+++ b/server/app/assets/main.scss
@@ -35,7 +35,7 @@
         }
     }
     th.participant-header {
-        border-right-style: none;
+        border-right: 1px solid transparent;
     }
     .participant-header {
         z-index: 100;
